// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deploy Failure Scenarios constraint violation with transaction - automatic rollback: transaction-rollback-migration-state 1`] = `
{
  "changeCount": 0,
  "changes": [],
  "eventCount": 1,
  "events": [
    {
      "change_name": "violate_constraint",
      "error_code": "23505",
      "error_message": "duplicate key value violates unique constraint "test_users_email_key"",
      "event_type": "fail",
      "project": "test-constraint-fail",
      "stack_trace": "error: duplicate key value violates unique constraint "test_users_email_key"
    at /launchql/node_modules/pg/lib/client.js:545:17
    at processTicksAndRejections (node:internal/process/task_queues:105:5)
    at executeQuery (/launchql/packages/core/src/migrate/utils/transaction.ts:89:24)
    at /launchql/packages/core/src/migrate/client.ts:150:21
    at withTransaction (/launchql/packages/core/src/migrate/utils/transaction.ts:35:24)
    at LaunchQLMigrate.deploy (/launchql/packages/core/src/migrate/client.ts:112:9)
    at Object.<anonymous> (/launchql/packages/core/__tests__/projects/deploy-failure-scenarios.test.ts:43:9)",
    },
  ],
}
`;

exports[`Deploy Failure Scenarios constraint violation without transaction - partial deployment: partial-deployment-migration-state 1`] = `
{
  "changeCount": 2,
  "changes": [
    {
      "change_name": "create_table",
      "project": "test-constraint-partial",
      "script_hash": "0624b3e2276299c8c3b8bfa514fe0d128906193769b3aeaea6732e71c0e352e6",
    },
    {
      "change_name": "add_record",
      "project": "test-constraint-partial",
      "script_hash": "833d7d349e3c4f07e1a24ed40ac9814329efc87c180180342a09874f8124a037",
    },
  ],
  "eventCount": 3,
  "events": [
    {
      "change_name": "create_table",
      "error_code": null,
      "error_message": null,
      "event_type": "deploy",
      "project": "test-constraint-partial",
      "stack_trace": null,
    },
    {
      "change_name": "add_record",
      "error_code": null,
      "error_message": null,
      "event_type": "deploy",
      "project": "test-constraint-partial",
      "stack_trace": null,
    },
    {
      "change_name": "violate_constraint",
      "error_code": "23505",
      "error_message": "duplicate key value violates unique constraint "test_products_sku_key"",
      "event_type": "fail",
      "project": "test-constraint-partial",
      "stack_trace": "error: duplicate key value violates unique constraint "test_products_sku_key"
    at /launchql/node_modules/pg-pool/index.js:45:11
    at processTicksAndRejections (node:internal/process/task_queues:105:5)
    at executeQuery (/launchql/packages/core/src/migrate/utils/transaction.ts:89:24)
    at /launchql/packages/core/src/migrate/client.ts:150:21
    at LaunchQLMigrate.deploy (/launchql/packages/core/src/migrate/client.ts:112:9)
    at Object.<anonymous> (/launchql/packages/core/__tests__/projects/deploy-failure-scenarios.test.ts:84:9)",
    },
  ],
}
`;

exports[`Deploy Failure Scenarios verify database state after constraint failure: partial-deployment-state-comparison 1`] = `
{
  "changeCount": 2,
  "changes": [
    {
      "change_name": "setup_schema",
      "project": "test-state-check",
      "script_hash": "a3419a48994fd13a668befcaab23c4d0d7e9e08e6e6a9093effb3c85b7e953d9",
    },
    {
      "change_name": "create_constraint_table",
      "project": "test-state-check",
      "script_hash": "ec5b17e155a2cd4e098716204192083d31d096a4cf163550d5ea176a4615a4d2",
    },
  ],
  "eventCount": 4,
  "events": [
    {
      "change_name": "fail_on_constraint",
      "error_code": "23514",
      "error_message": "new row for relation "orders" violates check constraint "orders_amount_check"",
      "event_type": "fail",
      "project": "test-state-check",
      "stack_trace": "error: new row for relation "orders" violates check constraint "orders_amount_check"
    at /launchql/node_modules/pg/lib/client.js:545:17
    at processTicksAndRejections (node:internal/process/task_queues:105:5)
    at executeQuery (/launchql/packages/core/src/migrate/utils/transaction.ts:89:24)
    at /launchql/packages/core/src/migrate/client.ts:150:21
    at withTransaction (/launchql/packages/core/src/migrate/utils/transaction.ts:35:24)
    at LaunchQLMigrate.deploy (/launchql/packages/core/src/migrate/client.ts:112:9)
    at Object.<anonymous> (/launchql/packages/core/__tests__/projects/deploy-failure-scenarios.test.ts:124:9)",
    },
    {
      "change_name": "setup_schema",
      "error_code": null,
      "error_message": null,
      "event_type": "deploy",
      "project": "test-state-check",
      "stack_trace": null,
    },
    {
      "change_name": "create_constraint_table",
      "error_code": null,
      "error_message": null,
      "event_type": "deploy",
      "project": "test-state-check",
      "stack_trace": null,
    },
    {
      "change_name": "fail_on_constraint",
      "error_code": "23514",
      "error_message": "new row for relation "orders" violates check constraint "orders_amount_check"",
      "event_type": "fail",
      "project": "test-state-check",
      "stack_trace": "error: new row for relation "orders" violates check constraint "orders_amount_check"
    at /launchql/node_modules/pg-pool/index.js:45:11
    at processTicksAndRejections (node:internal/process/task_queues:105:5)
    at executeQuery (/launchql/packages/core/src/migrate/utils/transaction.ts:89:24)
    at /launchql/packages/core/src/migrate/client.ts:150:21
    at LaunchQLMigrate.deploy (/launchql/packages/core/src/migrate/client.ts:112:9)
    at Object.<anonymous> (/launchql/packages/core/__tests__/projects/deploy-failure-scenarios.test.ts:134:9)",
    },
  ],
}
`;

exports[`Deploy Failure Scenarios verify database state after constraint failure: transaction-rollback-state-comparison 1`] = `
{
  "changeCount": 0,
  "changes": [],
  "eventCount": 1,
  "events": [
    {
      "change_name": "fail_on_constraint",
      "error_code": "23514",
      "error_message": "new row for relation "orders" violates check constraint "orders_amount_check"",
      "event_type": "fail",
      "project": "test-state-check",
      "stack_trace": "error: new row for relation "orders" violates check constraint "orders_amount_check"
    at /launchql/node_modules/pg/lib/client.js:545:17
    at processTicksAndRejections (node:internal/process/task_queues:105:5)
    at executeQuery (/launchql/packages/core/src/migrate/utils/transaction.ts:89:24)
    at /launchql/packages/core/src/migrate/client.ts:150:21
    at withTransaction (/launchql/packages/core/src/migrate/utils/transaction.ts:35:24)
    at LaunchQLMigrate.deploy (/launchql/packages/core/src/migrate/client.ts:112:9)
    at Object.<anonymous> (/launchql/packages/core/__tests__/projects/deploy-failure-scenarios.test.ts:124:9)",
    },
  ],
}
`;
